k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-gui-service
                port:
                  number: 8501
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: payment-backend-service
                port:
                  number: 5000
